# glm-ocr-rs

./: .gitignore  Cargo.toml  README.md
src/: generation.rs  image_processor.rs  layout.rs  lib.rs  main.rs  model.rs  model_loader.rs  quantize.rs  tokenizer.rs
src/text/: attention.rs  block.rs  decoder.rs  mlp.rs  rotary.rs
src/vision/: attention.rs  block.rs  encoder.rs  merger.rs  mlp.rs  patch_embed.rs
